# docs/swagger.json
@@ -13,11 +13,14 @@
         },
         "version": "1.0"
     },
-    "host": "https://{host}:{port}",
-    "basePath": "/api/v1",
     "paths": {
         "/api/v1/auth/dashboard/login": {
             "post": {
+                "security": [
+                    {
+                        "AppAuth": []
+                    }
+                ],
                 "description": "Authenticate dashboard user with email and password",
                 "consumes": [
                     "application/json"
@@ -59,6 +62,12 @@
                             "$ref": "#/definitions/docsResponse.Response401"
                         }
                     },
+                    "403": {
+                        "description": "Forbidden - Invalid X-AUTH-APP",
+                        "schema": {
+                            "$ref": "#/definitions/docsResponse.Response403"
+                        }
+                    },
                     "500": {
                         "description": "Server Error",
                         "schema": {
@@ -70,6 +79,11 @@
         },
         "/api/v1/auth/dashboard/refresh-token": {
             "post": {
+                "security": [
+                    {
+                        "AppAuth": []
+                    }
+                ],
                 "description": "Refresh authentication token for dashboard user",
                 "consumes": [
                     "application/json"
@@ -111,6 +125,12 @@
                             "$ref": "#/definitions/docsResponse.Response401"
                         }
                     },
+                    "403": {
+                        "description": "Forbidden - Invalid X-AUTH-APP",
+                        "schema": {
+                            "$ref": "#/definitions/docsResponse.Response403"
+                        }
+                    },
                     "500": {
                         "description": "Server Error",
                         "schema": {
@@ -122,6 +142,11 @@
         },
         "/api/v1/category": {
             "get": {
+                "security": [
+                    {
+                        "AppAuth": []
+                    }
+                ],
                 "description": "Retrieve all categories",
                 "produces": [
                     "application/json"
@@ -137,6 +162,12 @@
                             "$ref": "#/definitions/docsResponse.CategoryList200"
                         }
                     },
+                    "403": {
+                        "description": "Forbidden - Invalid X-AUTH-APP",
+                        "schema": {
+                            "$ref": "#/definitions/docsResponse.Response403"
+                        }
+                    },
                     "500": {
                         "description": "Server error",
                         "schema": {
@@ -144,11 +175,16 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/api/v1/category/create": {
             "post": {
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "AppAuth": []
                     }
                 ],
                 "description": "Create a new category",
@@ -163,13 +199,6 @@
                 ],
                 "summary": "Create a new category",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer {token}",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "description": "Category to create",
                         "name": "category",
@@ -193,6 +222,18 @@
                             "$ref": "#/definitions/docsResponse.CategoryCreate400"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/docsResponse.Response401"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden - Invalid X-AUTH-APP",
+                        "schema": {
+                            "$ref": "#/definitions/docsResponse.Response403"
+                        }
+                    },
                     "500": {
                         "description": "Server Error",
                         "schema": {
@@ -204,6 +245,11 @@
         },
         "/api/v1/category/{id}": {
             "get": {
+                "security": [
+                    {
+                        "AppAuth": []
+                    }
+                ],
                 "description": "Retrieve category by its ID",
                 "produces": [
                     "application/json"
@@ -234,6 +280,12 @@
                             "$ref": "#/definitions/docsResponse.Response400"
                         }
                     },
+                    "403": {
+                        "description": "Forbidden - Invalid X-AUTH-APP",
+                        "schema": {
+                            "$ref": "#/definitions/docsResponse.Response403"
+                        }
+                    },
                     "404": {
                         "description": "Category not found",
                         "schema": {
@@ -247,11 +299,89 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/api/v1/category/{id}/delete": {
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    },
+                    {
+                        "AppAuth": []
+                    }
+                ],
+                "description": "Delete category by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Delete category",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Category ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Category deleted",
+                        "schema": {
+                            "$ref": "#/definitions/docsResponse.CategoryDelete200"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid ID",
+                        "schema": {
+                            "$ref": "#/definitions/docsResponse.Response400"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/docsResponse.Response401"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden - Invalid X-AUTH-APP",
+                        "schema": {
+                            "$ref": "#/definitions/docsResponse.Response403"
+                        }
+                    },
+                    "404": {
+                        "description": "Category not found",
+                        "schema": {
+                            "$ref": "#/definitions/docsResponse.Response404"
+                        }
+                    },
+                    "409": {
+                        "description": "Category has linked entities",
+                        "schema": {
+                            "$ref": "#/definitions/docsResponse.Response409"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/docsResponse.Response500"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/category/{id}/update": {
             "put": {
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "AppAuth": []
                     }
                 ],
                 "description": "Update category by ID",
@@ -266,13 +396,6 @@
                 ],
                 "summary": "Update category",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer {token}",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "integer",
                         "description": "Category ID",
@@ -303,67 +426,16 @@
                             "$ref": "#/definitions/docsResponse.CategoryUpdate400"
                         }
                     },
-                    "500": {
-                        "description": "Server error",
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/docsResponse.Response500"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Delete category by ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Category"
-                ],
-                "summary": "Delete category",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer {token}",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Category ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Category deleted",
-                        "schema": {
-                            "$ref": "#/definitions/docsResponse.CategoryDelete200"
+                            "$ref": "#/definitions/docsResponse.Response401"
                         }
                     },
-                    "400": {
-                        "description": "Invalid ID",
+                    "403": {
+                        "description": "Forbidden - Invalid X-AUTH-APP",
                         "schema": {
-                            "$ref": "#/definitions/docsResponse.Response400"
-                        }
-                    },
-                    "404": {
-                        "description": "Category not found",
-                        "schema": {
-                            "$ref": "#/definitions/docsResponse.Response404"
-                        }
-                    },
-                    "409": {
-                        "description": "Category has linked entities",
-                        "schema": {
-                            "$ref": "#/definitions/docsResponse.Response409"
+                            "$ref": "#/definitions/docsResponse.Response403"
                         }
                     },
                     "500": {
@@ -380,6 +452,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "AppAuth": []
                     }
                 ],
                 "description": "Create a new dashboard user with the provided details.",
@@ -394,13 +469,6 @@
                 ],
                 "summary": "Create a new dashboard user",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer {token}",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "description": "Dashboard User Create DTO",
                         "name": "dashboardUser",
@@ -424,6 +492,18 @@
                             "$ref": "#/definitions/docsResponse.DashboardUserCreate400"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/docsResponse.Response401"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden - Invalid X-AUTH-APP",
+                        "schema": {
+                            "$ref": "#/definitions/docsResponse.Response403"
+                        }
+                    },
                     "500": {
                         "description": "Server Error",
                         "schema": {
@@ -438,6 +518,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "AppAuth": []
                     }
                 ],
                 "description": "Upload one or more images with a specific imageType. Requires JWT authentication.",
@@ -452,13 +535,6 @@
                 ],
                 "summary": "Upload images",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer {token}",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "Type of image (e.g. category)",
@@ -494,6 +570,12 @@
                         "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/docsResponse.Response401"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden - Invalid X-AUTH-APP",
+                        "schema": {
+                            "$ref": "#/definitions/docsResponse.Response403"
                         }
                     },
                     "413": {
@@ -809,6 +891,25 @@
                 "message": {
                     "type": "string",
                     "example": "Unauthorized"
+                }
+            }
+        },
+        "docsResponse.Response403": {
+            "type": "object",
+            "properties": {
+                "errorCode": {
+                    "type": "string",
+                    "enum": [
+                        "FORBIDDEN"
+                    ]
+                },
+                "isSuccess": {
+                    "type": "boolean",
+                    "example": false
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Forbidden"
                 }
             }
         },
@@ -1214,6 +1315,12 @@
         }
     },
     "securityDefinitions": {
+        "AppAuth": {
+            "description": "Ключ аутентификации приложения из AUTH_APP_KEY",
+            "type": "apiKey",
+            "name": "X-AUTH-APP",
+            "in": "header"
+        },
         "BearerAuth": {
             "description": "Введите токен в формате: Bearer {token}",
             "type": "apiKey",
